--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RACE AWAY</title>
     <link rel="stylesheet" href="index.css">
 </head>
@@ -14,10 +15,18 @@
     </div>
 
     <div class="timer-container">
-    <div class="timer" id="timer">0:00:00</div>
-        <button id="startButton" onclick="startTimer()">Start</button>
-        <button id="EndButton" onclick="endTimer()">Pause</button>
-        <button id="lapButton" onclick="lapTimer()">Lap</button>
+        <div id="timer">00:00:00</div>
+        <div class="buttons">
+            <button id="startButton" onclick="startTimer()">Start</button>
+            <button id="EndButton" onclick="endTimer()">Pause</button>
+            <button id="lapButton" onclick="lapTimer()">Lap</button>
+        </div>
+    </div>
+
+    <div class = "laps-container">
+        <ul id="'Laps">
+
+        </ul>
     </div>
 
     <script src="index.js"></script>
